fixed content margin on mobile

--- a/style.css
+++ b/style.css
@@ -49,6 +49,15 @@ h6 {
     border: 1px solid #fff;
 }
 
+#intro {
+    padding-top: 80px;
+}
+
+.margen {
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
 @media (max-width: 575px) {
     #hero .title {
         color: white;
@@ -57,15 +66,10 @@ h6 {
         padding: 10px 20px;
         border: 1px solid #fff;
     }
-}
-
-#intro {
-    padding-top: 80px;
-}
-
-.margen {
-    margin-left: 10%;
-    margin-right: 10%;
+    .margen {
+        margin-left: 3%;
+        margin-right: 3%;
+    }
 }
 
 .mail {
